# SelfRegisterHandler

./: CMakeLists.txt  Dockerfile  Registry.h  dockerBuild.sh  installExtension.sh  main.cpp  readme.md
handlers/: CMakeLists.txt
include/: HeaderHandler.h  IHandler.h  IRegistryEntry.h  NonCompliantHandler.h  ParserTypeRegistry.h  ProtocolHandler.h  Registry.h  StreamParser.h  StringParser.h
src/: HandlerResult.cpp  HeaderHandler.cpp  NonCompliantHandler.cpp  ProtocolHandler.cpp  Registry.cpp  StreamParser.cpp  StringParser.cpp
unit-test/factory_sample/: CMakeLists.txt  Handler.h  Message.h  factory-test.cpp
unit-test/factory_sample/include/: LoginHandler.h  LogoutHandler.h
unit-test/factory_sample/src/: LoginHandler.cpp  LogoutHandler.cpp
unit-test/include/: HandlerResult.h  HeaderHandler.h  IHandler.h  ParserTypeRegistry.h  ProtocolHandler.h  StreamParser.h  StringParser.h
unit-test/src/: NonCompliantHandler.cpp  ProtocolHandler.cpp  StreamParser.cpp  StreamParser.cpp.old  StringParser.cpp  main.cpp
unit-test/test/: ihandler-test.cpp  parser-test.cpp  stringTest.cpp  temp.cpp
